@@ -1,4 +1,6 @@
 4.8.5:
+  * Now you can use TMPDIR env variable to override default
+    test directory ("/tmp").
 
 4.8.4:
   * When doing the full matrix testing with python >=2.6, we
